--- a/gnews/10.md
+++ b/gnews/10.md
@@ -1,7 +1,7 @@
 ---
-title: 要家人安全只有灭共
+title: 普京问外交部真以为老百姓不知道你们的假骗？
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1993037/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1993125/)
 
 #### 视频剪辑: WinterGuo ；开智则立 ；0-0 ；rmrf ；Qingjing ；玉米地的小蜗牛 ；牛魔王
 视频定位：BENJ1；WEI
