--- a/gnews/7.md
+++ b/gnews/7.md
@@ -1,7 +1,7 @@
 ---
-title: 制裁法案是七哥最早说的
+title: 世界越来越多的人和我们站在一起
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1993068/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1993163/)
 
 #### 视频剪辑: WinterGuo ；开智则立 ；0-0 ；rmrf ；Qingjing ；玉米地的小蜗牛 ；牛魔王
 视频定位：BENJ1；WEI
