--- a/gnews/14.md
+++ b/gnews/14.md
@@ -1,7 +1,7 @@
 ---
-title: 冬奥会共产党彻底完了
+title: 孔子学院对西方世界的渗透
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1993089/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1993204/)
 
 #### 视频剪辑: WinterGuo ；开智则立 ；0-0 ；rmrf ；Qingjing ；玉米地的小蜗牛 ；牛魔王
 视频定位：BENJ1；WEI
