--- a/gnews/4.md
+++ b/gnews/4.md
@@ -1,7 +1,7 @@
 ---
-title: 中国经济恒大地产庞氏骗局继续造假
+title: 拜登法案
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1993819/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1993852/)
 
 #### 视频剪辑: WinterGuo ，开智则立 ，0-0 ，rmrf ，Qingjing ，玉米地的小蜗牛 ，牛魔王
 视频定位：BENJ1，WEI
