--- a/gnews/19.md
+++ b/gnews/19.md
@@ -1,7 +1,7 @@
 ---
-title: 中共内部秘密讲话，南海、台湾形势、美欧经济、冬奥会
+title: 习近平为何抓刘亚洲（上）
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1994176/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1994223/)
 
 #### 视频剪辑: WinterGuo ，开智则立 ，0-0 ，rmrf ，Qingjing ，玉米地的小蜗牛 ，牛魔王
 视频定位：BENJ1，WEI
