--- a/gnews/18.md
+++ b/gnews/18.md
@@ -1,7 +1,7 @@
 ---
-title: 日本人的进步
+title: 七哥早已知道5个老员工的背叛
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1997571/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1997617/)
 
 #### 视频剪辑: WinterGuo ，开智则立 ，0-0 ，rmrf ，Qingjing ，玉米地的小蜗牛 ，牛魔王
 视频定位：BENJ1，WEI
