--- a/gnews/21.md
+++ b/gnews/21.md
@@ -1,7 +1,7 @@
 ---
-title: 不能依靠别人
+title: 七哥拒绝10家媒体采访的原因
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1997545/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1997595/)
 
 #### 视频剪辑: WinterGuo ，开智则立 ，0-0 ，rmrf ，Qingjing ，玉米地的小蜗牛 ，牛魔王
 视频定位：BENJ1，WEI
