--- a/gnews/16.md
+++ b/gnews/16.md
@@ -1,7 +1,7 @@
 ---
-title: 数字货币在世界的反响
+title: 如何双休延长20秒
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1997719/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1997733/)
 
 #### 视频剪辑: WinterGuo ，开智则立 ，0-0 ，rmrf ，Qingjing ，玉米地的小蜗牛 ，牛魔王
 视频定位：BENJ1，WEI
