--- a/gnews/19.md
+++ b/gnews/19.md
@@ -1,7 +1,7 @@
 ---
-title: 盘古裕达一定会回到新中国联邦
+title: 数字货币势不可挡
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1997715/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1997741/)
 
 #### 视频剪辑: WinterGuo ，开智则立 ，0-0 ，rmrf ，Qingjing ，玉米地的小蜗牛 ，牛魔王
 视频定位：BENJ1，WEI
