--- a/gnews/10.md
+++ b/gnews/10.md
@@ -1,7 +1,7 @@
 ---
-title: 海牙荷兰反疫苗授权
+title: 奧地利抗議加劇 病例激增 國家出現兩極分化
 ---
-`Tokyo Sakura Video Group` [轉載自GNews](https://gnews.org/zh-hans/2000057/)
+`Tokyo Sakura Video Group` [轉載自GNews](https://gnews.org/zh-hans/2000224/)
 
 作者：东京樱花团小视频组
 
