--- a/gnews/19.md
+++ b/gnews/19.md
@@ -1,7 +1,7 @@
 ---
-title: 意大利的里雅斯特反疫苗通行证
+title: 海牙荷兰反疫苗授权
 ---
-`Tokyo Sakura Video Group` [轉載自GNews](https://gnews.org/zh-hans/2000001/)
+`Tokyo Sakura Video Group` [轉載自GNews](https://gnews.org/zh-hans/2000057/)
 
 作者：东京樱花团小视频组
 
