--- a/gnews/1.md
+++ b/gnews/1.md
@@ -1,7 +1,7 @@
 ---
-title: 世界正在发生大战，幕后黑手就是共产党
+title: 大卡车运动就是来源于七哥发起的香港卡车运动
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2001573/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2001605/)
 
 #### 视频剪辑: WinterGuo ；开智则立 ；0-0 ；rmrf ；Qingjing ；玉米地的小蜗牛 ；牛魔王
 视频定位：BENJ1；WEI
