--- a/gnews/3.md
+++ b/gnews/3.md
@@ -1,7 +1,7 @@
 ---
-title: 无苗灭共者究竟有多大价值
+title: 体育是个人自我的提现
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2001594/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2001690/)
 
 #### 视频剪辑: WinterGuo ；开智则立 ；0-0 ；rmrf ；Qingjing ；玉米地的小蜗牛 ；牛魔王
 视频定位：BENJ1；WEI
