--- a/gnews/4.md
+++ b/gnews/4.md
@@ -1,7 +1,7 @@
 ---
-title: 普京必拿乌克兰
+title: 没人看到冬奥会对我们爆料革命有多好
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2001590/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2001679/)
 
 #### 视频剪辑: WinterGuo ；开智则立 ；0-0 ；rmrf ；Qingjing ；玉米地的小蜗牛 ；牛魔王
 视频定位：BENJ1；WEI
