--- a/gnews/5.md
+++ b/gnews/5.md
@@ -1,11 +1,10 @@
 ---
-title: 今天乌克兰的局面
+title: 芯片原材料等暴涨的结局是什么
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2001580/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2001670/)
 
 #### 视频剪辑: WinterGuo ；开智则立 ；0-0 ；rmrf ；Qingjing ；玉米地的小蜗牛 ；牛魔王
 视频定位：BENJ1；WEI
-发布：陶子
 
 *发布：陶子*
 
