--- a/gnews/6.md
+++ b/gnews/6.md
@@ -1,7 +1,7 @@
 ---
-title: 世界正在发生大战，幕后黑手就是共产党
+title: 七哥对经济的判断，对欧洲局势的分析
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2001573/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2001663/)
 
 #### 视频剪辑: WinterGuo ；开智则立 ；0-0 ；rmrf ；Qingjing ；玉米地的小蜗牛 ；牛魔王
 视频定位：BENJ1；WEI
