--- a/gnews/8.md
+++ b/gnews/8.md
@@ -1,7 +1,7 @@
 ---
-title: 大卡车运动就是学习香港卡车运动
+title: 七哥对经济的判断，对欧洲局势的分析
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2001651/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2001663/)
 
 #### 视频剪辑: WinterGuo ；开智则立 ；0-0 ；rmrf ；Qingjing ；玉米地的小蜗牛 ；牛魔王
 视频定位：BENJ1；WEI
