--- a/gnews/12.md
+++ b/gnews/12.md
@@ -1,7 +1,7 @@
 ---
-title: 大卡车事件看事件经济的脉络
+title: 芯片原材料等暴涨的结局是什么
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2001645/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2001670/)
 
 #### 视频剪辑: WinterGuo ；开智则立 ；0-0 ；rmrf ；Qingjing ；玉米地的小蜗牛 ；牛魔王
 视频定位：BENJ1；WEI
