--- a/gnews/7.md
+++ b/gnews/7.md
@@ -1,7 +1,7 @@
 ---
-title: 中共参与后的奥林匹克就是一个犯罪组织
+title: 北京冬奥会的荒唐,国际组织的荒唐
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2001704/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2001724/)
 
 #### 视频剪辑: WinterGuo ；开智则立 ；0-0 ；rmrf ；Qingjing ；玉米地的小蜗牛 ；牛魔王
 视频定位：BENJ1；WEI
