--- a/gnews/10.md
+++ b/gnews/10.md
@@ -1,7 +1,7 @@
 ---
-title: 摩根家族的历史
+title: 盘古龙头变龟头的力量
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2001698/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2001843/)
 
 #### 视频剪辑: WinterGuo ；开智则立 ；0-0 ；rmrf ；Qingjing ；玉米地的小蜗牛 ；牛魔王
 视频定位：BENJ1；WEI
