--- a/gnews/18.md
+++ b/gnews/18.md
@@ -1,33 +1,32 @@
 ---
-title: 大直播后记：没有比新中国联邦更伟大的组织
+title: 大直播后记：如何认识体育？
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2002692/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2002707/)
 
-#### 整理：清水冷香、Lucy Liu
-编辑：小红帽
+#### **整理：Grace Fang、sadhu
+编辑：文泓**
 
-- ![](https://assets.gnews.org/wp-content/uploads/2022/02/image-1386.png)图片来源：雅典娜农场设计组
+- ![](https://assets.gnews.org/wp-content/uploads/2022/02/image-1387.png)图片来源：墨尔本雅典娜农场设计组
 
 
-第一，我们作为海外华人，作为一个人类，你的钱，能给你提供财富的保证，让你生存下去。财富，是人类走向快乐，愉悦，安全，健康必须的工具。全世界都在偷你的钱，只有新中国联邦让你有钱。
+我想说这次冬奥会里边，这个真的，你们没有任何人看到这个冬奥会里边（发生的一幕幕）对我们爆料革命有多好。就是我一看到冬奥会的信息，我就真的是想晃着走。过去，我看到男的走路怎么拧着屁股走，觉得很别扭啊。现在我都想拧着屁股走，觉得简直是幸福得不行不行的。
 
-第二，当你遇到困难，挫折的时候，有一帮人，也就是朋友，或者是一个国家，一个族群帮你。她叫国家，我们新中国联邦，我们有了大家这个人群。
+我觉得是老天真的帮我们，没有一件事儿不是这样，习太阳帮我们都干了，（而）我们想干很难，他都帮我们干了；还得感谢王岐山，包括这PAG太平联盟，包括这冬奥会，他整个的干这事儿，（宾馆）漏水啦，对（参赛）运动员的威胁啦，再有在一个选址上。现在全世界都在问一个问题，北京啥时候有滑雪的地方？所有看直播的，你们在北京哪儿滑过雪呢？你们啥时候滑过雪呢？你说中国雪最多的在东北长白山。那啥时候冰雪运动是中国人的主要运动的吗？何况冰雪运动在世界的体育界里边，它都是小项目。
 
-第三，我活着的时候，我有更多的人际关系，更多的机会和更多的认知，或者增加更多的知识。最后达到最高境界，共同的信仰，那就是我们现在干的事情。
+再一个就是关于体育的问题，体育是什么呀？
+体育并不是说，让你把这作为一生奋斗的目标，体育可能是你一个生存方式，或者说表现自我的一个工具，或者是体现你的快乐和生活的一种方式。你像专业运动员，像人家海东兄弟、钊颖妹妹，那是他们的一个工具，不是信仰和目标，仅仅是他们的工具。
 
-以上的几条哪个国家能够给你？哪个国家不是要你50%，70%的税？新中国联邦拿你一分钱税了吗？
+就像现在文紫跟她老公要双修一样。双修，这不是我们俩一辈子的目标啊，但是能我们俩快乐，双修也是夫妻的工具和体现方式。我不能指望这个赚钱啊，是吧？你不能说咱俩都不当医生了，也不工作了，就靠这吃饭了。那你双修两天累死了是吧，你吃啥呀？
 
-你在危难的时候，哪个国家会帮你啊？所谓的保险，警察帮你？现在警察会帮你吗？你觉得你的保险还管用吗？都给你剥夺了！
+体育是体现人生快乐生活的一种方式，或者说是人生生活的一种工具。职业运动员和非职业运动员，而西方绝大多数的运动员都是这样的。你像我们的约翰·亚当斯·摩根先生，人家是摩根士丹利的孙子，JP摩根先生的儿子，老人家应该92岁了吧。
 
-还有，当你在感情上，各方面，最需要人帮忙的时候，你觉得国家会帮到你吗？没有这个可能，（中共）不把你锁上了24年链子不错了。只有我们新中国联邦，还让你无苗，还让你有币。你觉得还有比咱更伟大的组织了吗？
+他曾是1952年芬兰夏季奥运会世界帆船冠军。我问他，你干嘛划船去？我上人家里去，看到有2个大船的模型，当时就有100多米的船模型。我问王雁平，这船是啥意思？她也不懂。我说，咱大清朝的时候，那时候连战舰都没有，但人家玩了这两个世界级的蒸汽机游艇（模型），而且是一模一样造俩艘。
 
-我不认为任何共产主义描绘的乌托邦和各个宗教描绘的所谓的天堂比我们新中国联邦再好。这就是我们今天一定要珍惜的。咱咋会不高兴呢？ 咱怎么不每天感恩呢？
+所以说，摩根家族创造了金融系统，干掉了当时的——记住啊，罗斯柴尔德想来美国呢，就让摩根家族给干回去了。然后就是摩根士丹利当时在欧洲拿下半壁江山，还在亚洲拿下了大半江山。当时啊，最后一个末代皇帝溥仪，要把全博物馆的东西卖给摩根，多少钱呢？100万美元，全北京博物馆，100万美元啊。这是现在咱们摩尔根博物馆就在曼哈顿啊。大家记住，我们本来今年开年会，说实话想给你们个惊喜的，就是把摩根博物馆全租下来，在摩根博物馆给大家开年会，因为这个病毒是没法开。
 
-看看世界经济这个德性，只有咱们好。盖特只会赚钱，不会赔钱。GTV是控股公司，只能是越来越值钱。每1秒钟，咱在家睡觉，天天双修，咱都挣钱。只要你有GTV，有人给你挣钱啊。
+那还是摩根家族的，你看那里边儿所有的古董，所有的东西是他不对外展出的，只有咱们战友去了能让你们看。谁来曼哈顿你们都可以去看。
 
-GTV拥有盖特和喜联储的股票。你拥有Gclub。你告诉我，你有什么损失？你未来只赚不赔呀！
-
-Gnews你有什么输的啊？你直播有什么损失的？只能是增加（财富），是吧？
+啊，摩根先生都给我看。那个时候全北京、全中国博物馆100万美元卖给摩根，这个摩根没买，人家只要了一部分，你知道荒唐不荒唐。人家那时候就玩那个船了，人就玩那个古董了，人家孩子有钱就去玩票（帆船）奥运冠军。
 
 资料来源：[2022年2月11日 文贵大直播](https://gettr.com/streaming/ptvq9q8759)
 
@@ -36,8 +35,7 @@ Gnews你有什么输的啊？你直播有什么损失的？只能是增加（财
 更多资讯，请关注：
 [澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
 [澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/76QVRChsgU)
 [澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
  
