--- a/gnews/26.md
+++ b/gnews/26.md
@@ -1,9 +1,33 @@
 ---
-title: 2/13/2022 文贵直播：中共和俄罗斯是即将发生的世界大战的幕后黑手，乌克兰的代理人战争一触即发
+title: 2022.2.13大直播后记：共产党渗透联合国
 ---
-`秘密翻译组-北美组` [轉載自GNews](https://gnews.org/zh-hans/2002572/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2002627/)
 
-秘密翻译组-北美组
+**整理：枫叶红了、Lucy Liu
+编辑：Candy**
+
+- ![](https://assets.gnews.org/wp-content/uploads/2022/02/联合国-1.png)
+
+
+你看共产党到联合国干的事，任何只要共产党过去30年、50年掺和了组织，没有一个不是无法无天，无规则、不腐败的。
+
+北京冬奥会简直是世界上最荒唐、没有雪的冬奥会。在没有雪的城市开冬奥会，我R他8辈祖宗！这是对全人类的侮辱，西方世界必须要付出的代价。
+
+你没见那些白人穿着西装打着领带，到了盘古喝点酒后，可比共产党还疯狂。天天的夜总会里边的这个嫖客啊，没那么疯狂，他已经习以为常了， 就怕这些穿着西装的西方的所谓文明世界来的白人。在盘古，每天一到晚餐后，在那些雅间里边，那种白人的疯狂，来自国际组织的，那简直是惨不忍睹。别说是人了，猴子他都敢戳两下我跟你说。这个被禁闭的人的恶性一旦放出来，比魔还可怕，这不是我说的。
+
+共产党就把西方人，人类文明用千年挣来的民主自由对人性的尊重，他到了中国给彻底释放出来。然后再用这些人的恶来绑架他们，让他们传播这些恶和魔镜，这就是奥林匹克委员会，这就是联合国，这就是世界卫生组织，这就是WTO，这就是世界的所谓的记者联盟，所谓媒体联盟。只要带国际的，只要成组织的，全是共产党的帮凶。你看看，现在加拿大，你看看法国，你看看即将被砍头的乌克兰和俄国。世界元首都这么说话了，“这是我的女人，我要拿回来。”
+
+就共产党这个毒，你就像认识路大脑袋一样。 你跟他在一起，你老磨嗓子，因为他老吐痰，他嘎嘎老磨嗓子。蛇妖闫，她就老晃荡啊，你就老觉得好像地震似的。 哇塞，她晃啊，晃到你晕了。她坐在这儿，她的手就这么老晃，整得受不了，我老家叫得瑟。
+
+你看了鸡腿潘那个小样子的时候，你就发现原来你那么伟大，那么巨大，是吧？ 你看到高冰尘的时候，你发现，哇塞，我自己太帅了！ 你别说七哥了， 七哥只能排老三是吧？ 你看路森（网名），Danny这样子，高冰尘啥感觉呀？ 他老婆能不给他带绿帽吗？还得找一个亚洲的是吧？性能力强，他能不戴绿帽子吗？看着你这俩人，不跟你跑了吗？它是人的本能。
+
+***发布：Candy***
+
+更多资讯，请关注：
+[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/76QVRChsgU)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
  
 
