--- a/gnews/8.md
+++ b/gnews/8.md
@@ -1,7 +1,7 @@
 ---
-title: 20220213郭文贵大直播 应该喊口号，我们是无苗灭共者
+title: 20220213郭文贵大直播 ：不超过3次直播，世界巨变
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2004110/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2004155/)
 
 作者：东京樱花团小视频组
 
@@ -10,7 +10,7 @@ title: 20220213郭文贵大直播 应该喊口号，我们是无苗灭共者
 编辑发布：东京樱花团小视频组
 
 * * *
-![](https://assets.gnews.org/wp-content/uploads/2022/02/樱花-3.jpg)
+![](https://assets.gnews.org/wp-content/uploads/2022/02/樱花-3-1.jpg)
 喜马拉雅东京樱花团
 
  
