--- a/gnews/2.md
+++ b/gnews/2.md
@@ -1,9 +1,9 @@
 ---
-title: 七哥金句：爆雷
+title: 七哥金句：喜联储的价值
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2010057/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2010073/)
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/七哥金句-2..-1.jpg)
+![](https://assets.gnews.org/wp-content/uploads/2022/02/七哥金句-7..-scaled.jpg)
 整理：雅典娜农场
 发布：枫叶红了
 
