--- a/gnews/13.md
+++ b/gnews/13.md
@@ -1,9 +1,9 @@
 ---
-title: 七哥金句：喜币实力
+title: 七哥金句：爆雷
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2010030/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2010057/)
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/七哥金句-4..-scaled.jpg)
+![](https://assets.gnews.org/wp-content/uploads/2022/02/七哥金句-2..-1.jpg)
 整理：雅典娜农场
 发布：枫叶红了
 
