--- a/gnews/14.md
+++ b/gnews/14.md
@@ -1,7 +1,7 @@
 ---
-title: 人类一半人，不会放过黑暗势力、共产党
+title: 七哥谈个人破产
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2016955/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2017011/)
 
 #### 视频剪辑: WinterGuo ，开智则立 ，0-0 ，rmrf ，Qingjing ，玉米地的小蜗牛 ，牛魔王 视频定位：BENJ1，WEI
 
