--- a/gnews/2.md
+++ b/gnews/2.md
@@ -1,7 +1,7 @@
 ---
-title: 七哥证明了自己是个有血有肉的人
+title: 中共很邪恶，把全国人变成傻子
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2017046/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2017078/)
 
 #### 视频剪辑: WinterGuo ，开智则立 ，0-0 ，rmrf ，Qingjing ，玉米地的小蜗牛 ，牛魔王 视频定位：BENJ1，WEI
 
