--- a/gnews/21.md
+++ b/gnews/21.md
@@ -1,7 +1,7 @@
 ---
-title: 青蒿素的效果积极反应给农场
+title: 七哥谈个人破产
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2016977/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2017011/)
 
 #### 视频剪辑: WinterGuo ，开智则立 ，0-0 ，rmrf ，Qingjing ，玉米地的小蜗牛 ，牛魔王 视频定位：BENJ1，WEI
 
