--- a/gnews/26.md
+++ b/gnews/26.md
@@ -1,7 +1,7 @@
 ---
-title: 锁链女父亲，报应
+title: 中国坏男人太多
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2017019/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2017085/)
 
 #### 视频剪辑: WinterGuo ，开智则立 ，0-0 ，rmrf ，Qingjing ，玉米地的小蜗牛 ，牛魔王 视频定位：BENJ1，WEI
 
