--- a/gnews/13.md
+++ b/gnews/13.md
@@ -1,7 +1,7 @@
 ---
-title: 拜登将会对中国病毒溯源
+title: 喜交所将可以交易比特币
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2017297/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2017494/)
 
 #### 视频剪辑: WinterGuo ，开智则立 ，0-0 ，rmrf ，Qingjing ，玉米地的小蜗牛 ，牛魔王 视频定位：BENJ1，WEI
 
