--- a/gnews/19.md
+++ b/gnews/19.md
@@ -1,9 +1,9 @@
 ---
-title: 七哥金句：信仰，宗教，人性
+title: 七哥金句：我视兄弟姐妹为一命
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2017669/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2017770/)
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/七哥金句4-8.jpg)
+![](https://assets.gnews.org/wp-content/uploads/2022/02/七哥金句3-8.jpg)
 整理：雅典娜农场
 发布：枫叶红了
 
