--- a/gnews/34.md
+++ b/gnews/34.md
@@ -1,7 +1,7 @@
 ---
-title: 20220216中共病毒引起全世界排华、仇恨亚裔越发严重
+title: 20220216喜联储很快会和比特币和其它数字货币相互交易
 ---
-`Tokyo Sakura Video Group` [轉載自GNews](https://gnews.org/zh-hans/2019597/)
+`Tokyo Sakura Video Group` [轉載自GNews](https://gnews.org/zh-hans/2019611/)
 
 作者:东京樱花团小视频组
 
