--- a/gnews/1.md
+++ b/gnews/1.md
@@ -1,9 +1,9 @@
 ---
-title: 七哥金句：你为啥不把今天活好
+title: 七哥金句：两条路：死亡和赢
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2033585/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2033616/)
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/七哥金句7.001.jpeg)
+![](https://assets.gnews.org/wp-content/uploads/2022/02/七哥金句1.001-2.jpeg)![](https://assets.gnews.org/wp-content/uploads/2022/02/七哥金句5.001-1.jpeg)
 整理：雅典娜农场
 发布：枫叶红了
 
