--- a/gnews/2.md
+++ b/gnews/2.md
@@ -1,9 +1,9 @@
 ---
-title: 七哥金句：新中国联邦的信仰
+title: 七哥金句：不能控制自己的人
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2033579/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2033609/)
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/七哥金句6.001.jpeg)
+![](https://assets.gnews.org/wp-content/uploads/2022/02/七哥金句-1-3-scaled.jpg)
 整理：雅典娜农场
 发布：枫叶红了
 
