--- a/gnews/7.md
+++ b/gnews/7.md
@@ -1,9 +1,9 @@
 ---
-title: 七哥金句：新中国联邦的信仰
+title: 七哥金句：撤离美驻京大使馆，也是全球人民的胜利！
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2033579/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2033634/)
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/七哥金句6.001.jpeg)
+![](https://assets.gnews.org/wp-content/uploads/2022/02/七哥金句2.001-3.jpeg)
 整理：雅典娜农场
 发布：枫叶红了
 
