--- a/gnews/27.md
+++ b/gnews/27.md
@@ -1,7 +1,7 @@
 ---
-title: 中共的蓝金黄渗透手段
+title: 谷爱凌被问到国籍问题时的反应
 ---
-`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/2035039/)
+`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/2035136/)
 
 台灣寶島農場
 
