--- a/gnews/7.md
+++ b/gnews/7.md
@@ -1,7 +1,7 @@
 ---
-title: 世界不灭共，我们就被灭了
+title: 习想3小时拿下台湾
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2054770/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2054841/)
 
 #### 视频剪辑: WinterGuo ；开智则立 ；0-0 ；rmrf ；Qingjing ；玉米地的小蜗牛 ；牛魔王
 视频定位：BENJ1；WEI
