--- a/gnews/2.md
+++ b/gnews/2.md
@@ -1,7 +1,7 @@
 ---
-title: 相信假话是因为脑子太空白,对PAG和欺民贼一定要行动
+title: 千年来最可怕是来自俄罗斯
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2054875/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2054883/)
 
 #### 视频剪辑: WinterGuo ；开智则立 ；0-0 ；rmrf ；Qingjing ；玉米地的小蜗牛 ；牛魔王
 视频定位：BENJ1；WEI
