--- a/gnews/13.md
+++ b/gnews/13.md
@@ -1,7 +1,7 @@
 ---
-title: 美对俄事件的政治演戏
+title: 彭佩奥访台的原因
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2054823/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2054851/)
 
 #### 视频剪辑: WinterGuo ；开智则立 ；0-0 ；rmrf ；Qingjing ；玉米地的小蜗牛 ；牛魔王
 视频定位：BENJ1；WEI
