--- a/gnews/4.md
+++ b/gnews/4.md
@@ -1,7 +1,7 @@
 ---
-title: 世界的巨变，美国的政治游戏
+title: 中共全部造的假
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2055148/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2055189/)
 
 #### 视频剪辑: WinterGuo ；开智则立 ；0-0 ；rmrf ；Qingjing ；玉米地的小蜗牛 ；牛魔王
 视频定位：BENJ1；WEI
