--- a/gnews/2.md
+++ b/gnews/2.md
@@ -1,7 +1,7 @@
 ---
-title: 普习发动战争的原因
+title: 沼泽地是什么的人
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2066354/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2066372/)
 
 #### 视频剪辑: WinterGuo ；开智则立 ；0-0 ；rmrf ；Qingjing ；玉米地的小蜗牛 ；牛魔王
 视频定位：BENJ1；WEI
