--- a/gnews/12.md
+++ b/gnews/12.md
@@ -1,7 +1,7 @@
 ---
-title: 实力外交，黑社会一样
+title: 切尔诺贝利的真实影响
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2066347/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2066361/)
 
 #### 视频剪辑: WinterGuo ；开智则立 ；0-0 ；rmrf ；Qingjing ；玉米地的小蜗牛 ；牛魔王
 视频定位：BENJ1；WEI
